--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
 sudo: false
 language: go
-go:
-  - 1.2
-  - 1.3
-  - 1.4
-  - tip
+matrix:
+  include:
+    - go: "1.2"
+      env: COVER_PKG=code.google.com/p/go.tools/cmd/cover
+    - go: "1.3"
+      env: COVER_PKG=code.google.com/p/go.tools/cmd/cover
+    - go: "1.4"
+      env: COVER_PKG=golang.org/x/tools/cmd/cover
+    - go: "tip"
+      env: COVER_PKG=golang.org/x/tools/cmd/cover
+before_install:
+  - go get $COVER_PKG
+  - go get github.com/modocache/gover
+  - go get github.com/mattn/goveralls
+script:
+  - go test -v
+  - gover
+  - goveralls -coverprofile=gover.coverprofile -service travis-ci -repotoken $COVERALLS_TOKEN
