--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,10 @@ before_install:
   - go get golang.org/x/tools/cmd/cover
 script:
   - go test -v
-  - $HOME/gopath/bin/goveralls -service=travis-ci
+  - goveralls -service travis-ci
+branches:
+  only:
+    - master
+matrix:
+  allow_failures:
+    - go: tip
