--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: false
 language: go
 go:
-  - 1.10.2
-  - tip
+  - "1.12"
+  - "tip"
 before_install:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
